fix: on mobile browser

--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -57,6 +57,7 @@ pre {
   */
   white-space: pre-wrap;
   word-wrap: normal;
+  word-break: break-all;
 }
 
 body,
